WiP type provider listing sources, updates

--- a/src/csv-service.fsproj
+++ b/src/csv-service.fsproj
@@ -59,9 +59,12 @@
   </Target>
   -->
   <ItemGroup>
-    <None Include="paket.references" />
+    <Compile Include="common/serializer.fs" />
     <Compile Include="pivot.fs" />
+    <Compile Include="listing.fs" />
+    <Compile Include="storage.fs" />
     <Compile Include="app.fsx" />
+    <None Include="paket.references" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
